# CaptureProblemSolver

./: .gitmodules  AUTHORS  README.md
c++/: CMakeLists.txt
c++/bindings/: CMakeLists.txt  PyBalanceMPCSolver.cpp  PyBoundednessMPCSolver.cpp  PyCaptureProblemSolver.cpp  __init__.py  converters.h
c++/include/: BoundenessConstraint.h  CondensedOrthogonalMatrix.h  Givens.h  GivensSequence.h  LeastSquare.h  LinearConstraints.h  Logger.h  Problem.h  ProblemMatrices.h  QRAlgorithms.h  QuadraticObjective.h  SQP.h  Statistics.h  defs.h  toMatlab.h
c++/include/bms/: BoundenessConstraint.h  CondensedOrthogonalMatrix.h  Givens.h  GivensSequence.h  LeastSquare.h  LinearConstraints.h  Logger.h  Problem.h  ProblemMatrices.h  QRAlgorithms.h  QuadraticObjective.h  SQP.h  bms_api.h  defs.h
c++/include/cps/: BoundenessConstraint.h  CaptureSolver.h  CondensedOrthogonalMatrix.h  Givens.h  GivensSequence.h  LeastSquare.h  LinearConstraints.h  Logger.h  Problem.h  ProblemMatrices.h  QRAlgorithms.h  QuadraticObjective.h  SQP.h  Statistics.h  cps_api.h  defs.h  toMatlab.h
c++/src/: BoundenessConstraint.cpp  CMakeLists.txt  CaptureSolver.cpp  CondensedOrthogonalMatrix.cpp  Givens.cpp  GivensSequence.cpp  LeastSquare.cpp  LinearConstraints.cpp  Logger.cpp  Problem.cpp  ProblemMatrices.cpp  QRAlgorithms.cpp  QuadraticObjective.cpp  SQP.cpp
c++/tests/: CMakeLists.txt  LeastSquareTest.cpp  LinearConstraintsTest.cpp  MatrixComputationsTest.cpp  ObjectiveTest.cpp  ProblemTest.cpp  SQPTest.cpp  SQPTestCommon.cpp  SQPTestCommon.h  bindings.py  main.cpp  misc.cpp  misc.h  timings.cpp  timings.h
c++/tests/data/: Problem01.txt  Problem02.txt  Problem03.txt  Problem04.txt
matlab/: applyNullspace.m  balanceMPC.m  buildLPZ.m  buildObjMatrix.m  clean.m  constrMPC.m  dedicatedLS.m  dedicatedNullspace.m  directJN.m  feasibilityLS.m  feasibilitySQP.m  initialPoint.m  lpz.m  matrix2latex.m  maxQPsteplength.m  multByPinvCaT.m  objMPC.m  unconstrainedGN.m  universalJj.m  z3d.m
matlab/QR/: applyGivensOnLeft.m  expandGivens.m  g2mat.m  givensCons.m  hessenbergQR.m  specialGivensCons.m  specialR.m  specialRext.m
matlab/illustration/: display3dCase.m  evalBoundedness.m  solveBoundedness.m
technical/: DedicatedCaptureSolver.tex
tex/: MPCSolver.tex
